[fix] - horizontal scroll logic

--- a/public/src/components/Contact/contact.scss
+++ b/public/src/components/Contact/contact.scss
@@ -39,12 +39,6 @@
   margin-top: 5%;
   text-shadow: .5px .5px black;
 }
-// .footer {
-//   width: 100%;
-//   height: 10vh;
-//   background: rgba(208,83,83, 0.7);
-// }
-
 
 // /* bottom half */
 
@@ -60,7 +54,8 @@
 .cards-item {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  // justify-content: center;
+  // justify-content: flex-start;
   align-items: flex-start;
   border: 3px solid #423d3d;
   margin: 1%;
@@ -74,9 +69,36 @@
     font-size: 25px;
   }
   .info-icons {
-    margin-top: 5%;
-    display: inline-block;
+    margin-top: 3%;
+    // display: inline-block;
   }
+  .info-column {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    padding: 3%;
+    justify-content: space-between;
+  
+    * {
+      margin: 2%;
+      font-size: 1.1em;
+    }
+  }
+}
+.cards-email {
+  width: 100%;
+  height: 100%;
+  // border: 2px solid pink;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  // .cards-button {
+  //   border: 2px solid #423d3d;
+  //   font-size: 30px;
+  // }
 }
 .cards-item:hover {
   background: linear-gradient(
@@ -84,40 +106,9 @@
     rgba(0, 0, 0, 0.8)
   );
   color: white;
+  transition: all .2s ease;
 
 }
-    // .cards-hover {
-    //   display: flex;
-    //   flex-direction: column;
-    //   justify-content: flex-end;
-    //   align-items: flex-end;
-  
-    //   visibility: hidden;
-    //   font-size: 25px;
-    //   font-family: 'notoMedium';
-    //   transition: all .5s ease;
-    // }
-// .cards-item:hover {
-//   padding: 25px;
-//   width: 300px;
-//   height: 300px;
-//   visibility: visible;
-//   opacity: 1;
-//   color: white;
-//   // background: #D05353;
-//   // cursor: pointer;
-  
-//   // h3 {
-//   //   // visibility: hidden;
-//   // }
-//   .cards-hover {
-//     visibility: visible;
-//   }
-//   transition: all .5s ease;
-// }
-// .mail {
-//   padding: none;
-// }
 .la {
   background: url('../../../dist/images/map.jpg') 0 55% no-repeat;
   background-size: cover;
@@ -140,7 +131,7 @@
 @media only screen and (max-width: 425px) {
   #contact {
     height: auto;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     
@@ -153,28 +144,25 @@
         font-size: 30px;
       }
     }
+    .bottom {
+      scroll-snap-type: x mandatory;
+      display: flex;
+      // width: 90%;
+      // padding-left: 5%;
+      // padding-right: 5%;
+      justify-content: flex-start;
+      align-items: center;
+      overflow-x: scroll;
+      overflow-y: hidden;
+      -webkit-overflow-scrolling: touch;
+      height: auto;
+
+      .cards-item {
+        scroll-snap-align: center;
+        margin: 10%;
+        width: 80vw;
+        flex: 0 0 auto;
+      }
+    }
   }
-
-  // .bottom {
-  //   width: 100%;
-  //   height: auto;
-  //   scroll-snap-type: x mandatory;
-  //   display: flex;
-  //   flex-direction: row;
-  //   justify-content: center;
-  //   align-items: center;
-  //   overflow-x: scroll;
-  //   overflow-y: hidden;
-  //   -webkit-overflow-scrolling: touch;
-
-  //   .cards-item {
-  //     scroll-snap-align: center;
-  //     // padding: 5%;
-  //     flex: 0 0 auto;
-  //     // width: 80vw;
-  //     text-align: justify;
-  //     width: 80%;
-  //     height: 80%;
-  //   }
-  // }
 }
