--- a/public/src/components/Email/EmailModal.scss
+++ b/public/src/components/Email/EmailModal.scss
@@ -2,12 +2,16 @@
 
 .EmailModal {
   position: absolute;
-  top: 40px;
-  left: 40px;
-  right: 40px;
-  bottom: 40px;
+  width: 20%;
+  height: 50vh;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
   background-color: #FBFAF8;
-  border-radius: 3% 3% 0 0;
+  border-radius: 3%;
   outline: none;
 }
 
@@ -20,6 +24,7 @@
   bottom: 0;
   background-color: rgba(0,0,0,0.8);
 }
+
 .icon-action {
   border-bottom: 1px solid #E5E4E2;
   padding: 2%;
@@ -57,4 +62,12 @@
 }
 .text {
   height: 100%;
+}
+
+// Phones
+
+@media only screen and (max-width: 425px) {
+  .EmailModal {
+    width: 100vw;
+  }
 }
